--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dev = ["black", "pre-commit"]
 
 [tool.flit.scripts]
 yaqd-attune = "yaqd_attune._attune:Attune.main"
+yaqd-attune-delay  = "yaqd_attune._attune_delay:AttuneDelay.main"
 
 
 [tool.black]
