Update fields into properties

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 # configure
-image: python:latest
+image: python:3.9
 variables:
   PIP_CACHE_DIR: "$CI_PROJECT_DIR/.cache/pip"  # cache on project level
 cache:
