--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,8 @@ dev = ["black", "pre-commit"]
 yaqd-attune = "yaqd_attune._attune:Attune.main"
 yaqd-attune-delay  = "yaqd_attune._attune_delay:AttuneDelay.main"
 
+[tool.flit.entrypoints."yaqc_qtpy.main.attune"]
+attune = "yaqd_attune._attune_gui:AttuneGUI"
 
 [tool.black]
 line-length = 99
