--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@ yaqd-attune = "yaqd_attune._attune:Attune.main"
 yaqd-attune-delay  = "yaqd_attune._attune_delay:AttuneDelay.main"
 
 [tool.flit.entrypoints."yaqc_qtpy.main.attune"]
-attune = "yaqd_attune._attune_gui:AttuneGUI"
+attune = "yaqd_attune.gui._attune_gui:AttuneGUI"
 
 [tool.black]
 line-length = 99
