--- a/yaqd_attune/attune-delay.toml
+++ b/yaqd_attune/attune-delay.toml
@@ -152,6 +152,10 @@ doc = "Get the zero position underlying daemon limits"
 response = "double"
 doc = "Get the applied offset in ps"
 
+[messages.get_dependent_hardware]
+response = {type="map", values="string"}
+doc = "Get mapping of name to host:port string. 'localhost' should be replaced on the client side with the host for this daemon."
+
 [properties]
 
 [properties.zero_position]
