--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,8 +21,8 @@ repos:
       - id: mypy
         exclude: ^docs/conf.py
 
-  - repo: https://gitlab.com/yaq/yaq-traits
-    rev: v2021.10.0
+  - repo: https://github.com/yaq-project/yaq-traits
+    rev: v2022.5.0
     hooks:
       - id: yaq-traits-check
       - id: yaq-traits-compose
