--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,8 +23,8 @@ classifiers = [
 ]
 
 [tool.flit.metadata.urls]
-Source = "https://gitlab.com/yaq/yaqd-attune"
-Issues = "https://gitlab.com/yaq/yaqd-attune/issues"
+Source = "https://github.com/yaq-project/yaqd-attune"
+Issues = "https://github.com/yaq-project/yaqd-attune/issues"
 
 [tool.flit.metadata.requires-extra]
 dev = ["black", "pre-commit"]
