--- a/yaqd_attune/attune-delay.toml
+++ b/yaqd_attune/attune-delay.toml
@@ -1,6 +1,6 @@
 protocol = "attune-delay"
 doc="yaq daemon representing an attune delay"
-traits=["has-limits", "is-homeable", "is-daemon"]
+traits=["has-dependents", "has-limits", "is-homeable", "is-daemon"]
 
 [links]
 source = "https://github.com/yaq-project/yaqd-attune"
