--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ dist-name = "yaqd-attune"
 author = "yaq developers"
 home-page = "https://yaq.fyi"
 description-file = "README.md"
-requires-python = ">=3.7<=3.10"
+requires-python = ">=3.7"
 requires = ["attune", "yaqd-core>=2022.7.0", "yaqc"]
 classifiers = [
     "Development Status :: 2 - Pre-Alpha",
