--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ dist-name = "yaqd-attune"
 author = "yaq developers"
 home-page = "https://yaq.fyi"
 description-file = "README.md"
-requires-python = ">=3.7"
+requires-python = ">=3.7,<=3.11"
 requires = ["attune", "yaqd-core>=2022.7.0", "yaqc"]
 classifiers = [
     "Development Status :: 2 - Pre-Alpha",
@@ -16,8 +16,8 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Natural Language :: English",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
     "Topic :: Scientific/Engineering",
 ]
 
