--- a/yaqg-attune/pyproject.toml
+++ b/yaqg-attune/pyproject.toml
@@ -3,13 +3,20 @@ requires = ["flit_core >=2,<4,!=3.7.0"]
 build-backend = "flit_core.buildapi"
 
 [tool.flit.metadata]
-module = "yaqd_attune"
-dist-name = "yaqd-attune"
+module = "yaqg_attune"
+dist-name = "yaqg-attune"
 author = "yaq developers"
 home-page = "https://yaq.fyi"
 description-file = "README.md"
-requires-python = ">=3.7,<3.12"
-requires = ["attune", "yaqd-core>=2022.7.0", "yaqc"]
+requires-python = ">=3.7"
+requires = [
+  "attune",
+  "yaqc",
+  "WrightTools",
+  "qtpy",
+  "qtypes",
+  "yaqc-qtpy",
+]
 classifiers = [
     "Development Status :: 2 - Pre-Alpha",
     "Intended Audience :: Science/Research",
@@ -28,15 +35,11 @@ Issues = "https://github.com/yaq-project/yaqd-attune/issues"
 [tool.flit.metadata.requires-extra]
 dev = ["black", "pre-commit"]
 
-[tool.flit.scripts]
-yaqd-attune = "yaqd_attune._attune:Attune.main"
-yaqd-attune-delay  = "yaqd_attune._attune_delay:AttuneDelay.main"
-
 [tool.flit.entrypoints."yaqc_qtpy.main.attune"]
-attune = "yaqd_attune.gui._attune_gui:AttuneGUI"
+attune = "yaqg_attune._attune_gui:AttuneGUI"
 
 [tool.flit.entrypoints."yaqc_qtpy.main.attune_delay"]
-attune-delay = "yaqd_attune.gui._attune_delay_gui:AttuneDelayGUI"
+attune-delay = "yaqg_attune.gui._attune_delay_gui:AttuneDelayGUI"
 
 [tool.black]
 line-length = 99
