--- a/.github/workflows/python-mypy.yml
+++ b/.github/workflows/python-mypy.yml
@@ -22,7 +22,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip!=22.1.*
         python -m pip install --upgrade mypy
-        python -m pip install ./yaqd_attune
+        python -m pip install ./yaqd-attune
     - name: Run mypy yaqd
       run: |
         cd yaqd-attune
